# price_pulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/agents/: architecture-maintainer.md  profiling-reviewer.md  quality.md
.github/agents/: architecture-maintainer.agent.md  module-grouping-reviewer.agent.md  plan-review.agent.md  profiling-reviewer.agent.md  quality.agent.md
.github/skills/plan-review/: findings.md
.github/skills/profiling/: findings.md
.github/workflows/: ci.yml
backend/: alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260524_0000_0001_init.py  20260525_0000_0002_add_core_domain_models.py  20260526_0000_0003_add_css_selector_currency.py  20260526_0000_0004_add_extraction_status_nullable_price.py  20260526_0000_0005_add_alert_channel_whatsapp.py  20260717_0000_0006_drop_extraction_status_check.py  20260717_0000_0007_add_source_preset_table.py  20260717_0000_0008_source_type_enum_to_string.py  20260719_0000_0009_add_scrape_job_table.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: _test_hooks.py  alerts.py  prices.py  products.py  router.py  scrape_jobs.py  sources.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  migrations.py
backend/app/models/: alert.py  enums.py  notification_log.py  price_history.py  product.py  scrape_job.py  source_preset.py
backend/app/schemas/: alert.py  common.py  notification.py  price.py  product.py  scrape_job.py  scraper.py  source_preset.py
backend/app/scrapers/: amazon.py  anti_blocking.py  base.py  currys.py  ebay.py  exceptions.py  facebook_marketplace.py  generic.py  http_client.py  john_lewis.py  playwright_base.py  registry.py
backend/app/services/: alert_service.py  monitoring_service.py  notifications.py  price_service.py  source_preset_service.py
backend/app/tasks/: maintenance.py  notify.py  schedule.py  scrape.py
backend/app/workers/: celery_app.py  scrape_job_signals.py
backend/scripts/: check_coverage_overlap.py  check_quality.py  create_schema.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/e2e/steps/: conftest.py  test_behaviour.py
backend/tests/integration/: test_alerts_api.py  test_celery_tasks.py  test_db.py  test_e2e_hooks.py  test_health.py  test_models.py  test_prices_api.py  test_products_api.py  test_products_failing_api.py  test_scrape_job_signals_integration.py  test_scrape_jobs_api.py  test_services_integration.py  test_source_presets_integration.py
backend/tests/unit/: test_alert_service.py  test_amazon_anti_blocking.py  test_anti_blocking.py  test_api_schemas.py  test_celery_app.py  test_check_coverage_overlap.py  test_check_quality.py  test_config.py  test_enums.py  test_exceptions.py  test_http_client.py  test_http_client_helpers.py  test_http_client_proxy.py  test_item18_scrapers.py  test_logging.py  test_model_repr.py  test_notifications.py  test_notify_helpers.py  test_notify_task.py  test_price_service.py  test_product_schedule_hooks.py  test_route_handlers.py  test_schedule_extras.py  test_schedule_task.py  test_schemas.py  test_scrape_job_schema.py  test_scrape_job_signals.py  test_scrape_task.py  test_scrape_task_extras.py  test_scrapers.py  test_source_presets.py  test_test_hooks_mounting.py
config/: quality-thresholds.toml
docker/: backend.Dockerfile  celery-playwright.Dockerfile  fixture-server.Dockerfile  frontend.Dockerfile  nginx.conf
docs/architecture/: repository-architecture.md
docs/behaviour/: README.md  alerts.feature  notification_channels.feature  product_tracking.feature  scraping.feature  ui_journeys.feature
docs/decisions/: anti-blocking-strategy.md  configurable-monitoring-sources.md  e2e-behaviour-spec.md  scrape-job-visibility.md  whatsapp-provider.md
docs/research/: uk-ecommerce-sources.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AlertFormDialog.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Layout.tsx  PriceChart.tsx  ProductFormDialog.tsx  ProductScrapeStatusBadge.tsx  ScrapeJobStatusBadge.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  calendar.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx
frontend/src/hooks/: useAlerts.ts  usePrices.ts  useProducts.ts  useScrape.ts  useScrapeJobs.ts  useSources.ts
frontend/src/lib/: formatPrice.ts
frontend/src/pages/: AlertManager.tsx  Dashboard.tsx  Jobs.tsx  ProductDetail.tsx
frontend/src/store/: uiStore.ts
frontend/tests/: setup.ts  smoke.test.ts
frontend/tests/e2e/: smoke.spec.ts
frontend/tests/e2e/steps/: ui_journeys.steps.ts
frontend/tests/mocks/: handlers.ts
frontend/tests/unit/: AlertFormDialog.test.tsx  AlertManager.test.tsx  App.test.tsx  ConfirmDialog.test.tsx  Dashboard.test.tsx  ErrorBoundary.test.tsx  Jobs.test.tsx  Layout.test.tsx  PriceChart.test.tsx  ProductDetail.test.tsx  ProductFormDialog.test.tsx  ScrapeJobStatusBadge.test.tsx  checkCoverageOverlap.test.ts  formatPrice.test.ts  hooks.test.tsx  uiStore.test.ts  useAlerts.test.tsx  useProducts.test.tsx  useScrapeJobs.test.tsx
scripts/: check_coverage_overlap_frontend.js  check_coverage_overlap_frontend.sh
tests/e2e/fixture_server/: app.py  test_app.py
