[project]
name = "price-pulse"
version = "0.1.1"
description = "Retail product price monitoring platform"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = []

[tool.uv.workspace]
members = ["backend"]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
]
