[project]
name = "price-pulse"
version = "0.1.3"
description = "Retail product price monitoring platform"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = []

[tool.uv.workspace]
members = ["backend"]

[tool.uv]
# Security floors for transitively-pulled packages flagged by pip-audit.
# Bump/prune these as upstreams (fastapi→starlette, celery/kombu→msgpack) widen
# their own pins past the fix versions.
constraint-dependencies = [
    "starlette>=1.3.1",  # PYSEC-2026-248, PYSEC-2026-249
    "msgpack>=1.2.1",    # GHSA-6v7p-g79w-8964
    "pip>=26.1.2",       # PYSEC-2026-196
]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
]
