[project]
name = "price-pulse-backend"
version = "0.1.6"
description = "Price Pulse backend — FastAPI application and Celery workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",  # >=2.14.2 fixes GHSA-4xgf-cpjx-pc3j
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",  # Item 17: sync driver for ScrapeJob signal-handler writes
    "celery[redis,asyncio]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-multipart>=0.0.31",  # >=0.0.31 fixes CVE-2026-53538/53539/53540
    "playwright>=1.44",
    "playwright-stealth>=2.0.0",  # Item 15: Chromium fingerprint evasion for the Amazon path
    "parsel>=1.9",
    "celery-redbeat>=0.13",
    "celery-aio-pool>=0.1.0rc8",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "radon>=6.0",
    "testcontainers[postgres]>=4.0",
    "fakeredis>=2.0",
    "pip-audit>=2.7",
    "pytest-bdd>=7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The executed E2E/BDD suite under tests/e2e requires the live e2e compose stack
# and is excluded from the default (coverage-gated) run; invoke it via
# `make test-e2e` / `make test-e2e-smoke`, which target tests/e2e explicitly.
addopts = "--strict-markers -m 'not live_api' --cov-fail-under=90 --ignore=tests/e2e"
testpaths = ["tests"]
# pytest-bdd resolves .feature paths relative to this dir (docs/behaviour is the
# canonical, browsable source of truth; step defs live under tests/e2e/steps).
bdd_features_base_dir = "../docs/behaviour"
markers = [
    "live_api: marks tests that hit real external services (skipped by default)",
    "integration: marks tests that require a real database",
    "live_amazon: marks Amazon live-scrape tests; requires celery-playwright service running; flaky in CI due to bot detection — run manually only",
    "smoke: marks the @smoke-tagged E2E behaviour subset run on every PR (via make test-e2e-smoke)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # FastAPI Depends()/Query() in function defaults — intentional pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
